src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>EC_Alias__c</fullName>
        <description>This field will be used to get alias for the User getting created.</description>
        <label>UserAlias</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_CDM_Contact__c</fullName>
        <description>US-74958:Raghav:26/06/2019:This field will be used for mapping between CDM and contact object.</description>
        <externalId>true</externalId>
        <label>External Contact Key</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EC_Contact_Status__c</fullName>
        <description>Field is used for checking if the user is created for this contact</description>
        <label>Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EC_Currency__c</fullName>
        <description>This field is used to map User&apos;s Currency with the contact</description>
        <label>Currency</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redemption_URL__c</fullName>
        <label>Completion URL</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Self-Registration</fullName>
                </value>
                <value>
                    <fullName>CDM Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Redempetion_URL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox field that is set to True if Redemption URL is populated for the Contact.</description>
        <label>Has Completion URL?</label>
        <type>Checkbox</type>
    </fields>
     <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EC_FederationIdentifier__c</fullName>
        <label>FederationIdentifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_SalesRep_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EC SalesRep User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EC_TimeZoneSidKey__c</fullName>
        <description>TimeZoneSidKey to update the corresponding user.</description>
        <label>TimeZoneSidKey</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_UserLanguageLocaleKey__c</fullName>
        <description>UserLanguageLocaleKey for updating the corresponding User.</description>
        <label>UserLanguageLocaleKey</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_UserLocaleSidKey__c</fullName>
        <description>UserLocaleSidKey for updating the corresponding user.</description>
        <label>UserLocaleSidKey</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_User_Type__c</fullName>
        <description>It defines the UserType of the User associated with the contact</description>
        <label>UserType</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>New Checkbox to soft delete the contacts</description>
        <label>EC_isActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unsubscribe__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to check if the user has opted out of Abandoned Cart emails</description>
        <label>Unsubscribe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__CompanyName__c</fullName>
        <defaultValue>$User.CompanyName</defaultValue>
        <label>CompanyName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__CompanyType__c</fullName>
        <label>CompanyType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Type1</fullName>
                </value>
                <value>
                    <fullName>Type2</fullName>
                </value>
                <value>
                    <fullName>Type3</fullName>
                </value>
                <value>
                    <fullName>Type4</fullName>
                </value>
                <value>
                    <fullName>Type5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__DataId__c</fullName>
        <description>B2B Commerce internal use only except when used with ccApiTestData.</description>
        <externalId>true</externalId>
        <inlineHelpText>B2B Commerce internal use only except when used with ccApiTestData.</inlineHelpText>
        <label>DataId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__IsPortalUser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Contact a Portal User</description>
        <inlineHelpText>True if contact is a portal user, False otherwise</inlineHelpText>
        <label>Portal User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__SelfRegistered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean determining if the user is a portal user self registered through the site.</description>
        <label>Self Registered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>TEXT(Account.EC_Division__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FULL_NAME</field>
            <operation>equals</operation>
            <value>prodtest</value>
        </filters>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
</CustomObject>